force-app/main/default/objects/Milestone1_Expense__c/Milestone1_Expense__c.object-meta.xml
<CustomObject>
    <description>Force.com Labs - PM - The expense object captures monetary expenses for a milestone task.</description>
    <label>Expense</label>
    <language>en_US</language>
    <nameField>
        <displayFormat>PEXP-{0000}</displayFormat>
        <label>Project Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>