force-app/main/default/objects/Milestone1_Expense__c/fields/Date_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Incurred__c</fullName>
    <inlineHelpText>The date the expense was charged. Defaults to today if left blank.</inlineHelpText>
    <label>Date Incurred</label>
    <type>Date</type>
</CustomField>