force-app/main/default/objects/Milestone1_Expense__c/fields/Incurred_By__c.field-meta.xml
<CustomField>
    <fullName>Incurred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user who charged the expense. Defaults to current user if left blank.</inlineHelpText>
    <label>Incurred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Expenses_Incurred</relationshipName>
    <type>Lookup</type>
</CustomField>