force-app/main/default/objects/Milestone1_Expense__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <inlineHelpText>The task to charge the expense against.</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>Milestone1_Task__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Project_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>